Playlist auslesen test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,7 @@
 <a href="{{url}}" >Login</a>
 <a routerLink="/main">Main</a>
 <p>{{hallo}}</p>
-<button (click)="getUserData()">Get Token</button>
+<button (click)="getUserData()">Get Userdata</button>
+<button (click)="getYellowTracks()">Get Yellow</button>
+
+<pre>{{playlists}}</pre>
