--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,7 @@
 <a routerLink="/main">Main</a>
 <p>{{hallo}}</p>
 <button (click)="getUserData()">Get Userdata</button>
-<button (click)="startLoading()">Get Yellow</button>
-
+<button (click)="startLoading()">Get PL</button>
 <ul>
-    <li *ngFor="let playlist of playlists" (click)="getTracks(playlist.href)">{{playlist.name}}</li>
+    <li *ngFor="let playlist of playlists" (click)="getTracks(playlist.tracks.href)">{{playlist.name}}</li>
 </ul>
