--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<div class="wrapper">
+  <div class="container">
+    <div class="centerbox">
+      <h1>Rediscover songs you loved.</h1>
+      <div class="button-row">
+        <button class="btn btn-outline">
+          What's this?
+        </button>
+        <button class="btn btn-green">Login with spotify</button>
+      </div>
+    </div>
+  </div>
+
+</div>
