--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -1,3 +1,10 @@
-<p>
-  main-panel works!
-</p>
+<button (click)="getUserData()">Get Userdata</button>
+<button (click)="startLoading()">Get PL</button>
+
+
+<input type="date" [(ngModel)]="from">
+<input type="date" [(ngModel)]="to">
+<ul>
+    <li *ngFor="let track of filteredTracks">{{track}}</li>
+</ul>
+<button (click)="filterByDate()">Get Tracks</button>
