--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: linear-gradient(to right, #8E54E9 , #4776E6);
+    color: white;
+}
+*{
+    margin: 0 auto;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+}
