--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,13 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="center-container">
     <div class="centerbox">
       <h1>Rediscover songs you loved.</h1>
+      <h4>Travel back in time and find tracks you listened to during certain times.</h4>
       <div class="button-row">
-        <button class="btn btn-outline">
+        <a class="btn btn-outline">
           What's this?
-        </button>
-        <button class="btn btn-green">Login with spotify</button>
+        </a>
+        <a class="btn btn-green" href="{{url}}">Login with spotify</a>
       </div>
     </div>
   </div>
