--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,19 @@ body {
 *{
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
+    outline: none;
+    outline: 0;
 }
+.wrapper {
+    width:95%;
+    margin-left: auto;
+    margin-right: auto;
+    height:85vh;
+} 
+.center-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+} 
