Card Grid eingefügt

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -1,16 +1,51 @@
 <div class="wrapper">
-    <div class="center">
-        <div class="filterPanel">
-            <!-- <h1>Hey {{user}}. Let's rediscover some tracks!</h1> -->
+    <div class="filterPanel">
+        <!-- <h1>Hey {{user}}. Let's rediscover some tracks!</h1> -->
 
-            <div class="filterSettings">
-                <input type="date" > <!--[(ngModel)]="from" -->
-                <input type="date" > <!-- [(ngModel)]="to"-->
-                <!-- <button (click)="filterByDate()">Get Tracks</button> -->
-            </div>
-            <div class="filteredTracks">
+        <div class="filterSettings">
+            <input type="date">
+            <!--[(ngModel)]="from" -->
+            <input type="date">
+            <!-- [(ngModel)]="to"-->
+            <!-- <button (click)="filterByDate()">Get Tracks</button> -->
+        </div>
+        <div class="filteredTracks">
 
+            <div class="card-grid">
+                <div class="albumCard">
+                    <div class="card-image">
+                        <img src="https://is2-ssl.mzstatic.com/image/thumb/Music60/v4/41/f9/c6/41f9c6cb-528f-28c4-8181-227550ba20e3/source/1200x1200bb.jpg"
+                            alt="">
+                    </div>
+                    <div class="albumDesc">
+                        <h1>Test</h1>
+                        <h4>artist</h4>
+                    </div>
+                </div>
+
+                <div class="albumCard">
+                    <div class="card-image">
+                        <img src="https://is2-ssl.mzstatic.com/image/thumb/Music60/v4/41/f9/c6/41f9c6cb-528f-28c4-8181-227550ba20e3/source/1200x1200bb.jpg"
+                            alt="">
+                    </div>
+                    <div class="albumDesc">
+                        <h1>Test</h1>
+                        <h4>artist</h4>
+                    </div>
+                </div>
+
+                <div class="albumCard">
+                    <div class="card-image">
+                        <img src="https://is2-ssl.mzstatic.com/image/thumb/Music60/v4/41/f9/c6/41f9c6cb-528f-28c4-8181-227550ba20e3/source/1200x1200bb.jpg"
+                            alt="">
+                    </div>
+                    <div class="albumDesc">
+                        <h1>Test</h1>
+                        <h4>artist</h4>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
