--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -1,11 +1,5 @@
-.center{
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-items: center */
-}
+
 .filterPanel{
-    flex-wrap: wrap;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -17,16 +11,25 @@
     width: 100%;
 }
 .filteredTracks{
-    /* background-color: #191414;
-    opacity: 50%;
     width: 100%;
     min-height: 78vh;
-    margin-bottom: 2vh;
-    border-radius: 20px; */
 
 }
-.albumCard {
-    min-width: 20%;
-    min-height: 10vh;
-    background-color: white;
+.card-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    padding: 1rem;
+    grid-gap: 1rem;
+}
+.card-image img{
+    width: 100%;
+    display: block;
+    border-radius: 20px 20px 0 0;
+}
+.albumCard{
+    background-color: wheat;
+    border-radius: 20px;
+}
+.albumDesc{
+    padding: 1%;
 }
