--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -17,43 +17,21 @@
                         <div class="imageWindow-max">
 
                         </div>
-                        <div class="info-min">
-                            <h3>Waking up to Sirens</h3>
-                            <p>Felly</p>
+                        <div class="info">
+                            <div class="extra_info">
+                                <div class="date">
+                                    <i class="far fa-calendar-alt"></i>
+                                    <p>27.08.2017</p>
+                                </div>
+                                <h5>Playlist:</h5>
+                                <p>erste sahne an intros und filmmusik</p>
+                            </div>
+                            <div class="main">
+                                <h3 class="title">Waking up to Sirens</h3>
+                                <p class="artist">Felly</p>
+                                <p class="album">Watching movies with the sound ...</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="back">
-                        <div class="imageWindow-min">
-
-                        </div>
-                        <div class="info-max">
-                            <h3>Waking up to Sirens</h3>
-                            <p>Felly</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="front">
-
-                    </div>
-                    <div class="back">
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="front">
-
-                    </div>
-                    <div class="back">
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="front">
-
-                    </div>
-                    <div class="back">
-
                     </div>
                 </div>
 
