--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -34,10 +34,6 @@
 }
 .front {
   background-color: white;
-  background-image:url('https://f4.bcbits.com/img/a0042959868_10.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   height: 100%;
   width: 100%;
   display: flex;
@@ -45,9 +41,18 @@
   justify-content: space-between;
   border-radius: 10px;
 }
-.imageWindow-min{
+.image{
+  /* background-image:url('https://f4.bcbits.com/img/a0042959868_10.jpg'); */
+  background-size:  cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 75%;
+  border-radius: 10px 10px 0 0;
+}
+.image img {
   width: 100%;
-  height: 60%;
+  height: auto;
+  border-radius: 10px 10px 0 0;
 }
 .info{
   background-color: white;
@@ -56,6 +61,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+  z-index: 2
   /* box-shadow: 0px -7px 6px #1c1c1cb3; */
 }
 .date{
