--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -3,11 +3,26 @@
         <!-- <h1>Hey {{user}}. Let's rediscover some tracks!</h1> -->
 
         <div class="filterSettings">
-            <input type="date" [(ngModel)]="from">
-            <!--[(ngModel)]="from" -->
-            <input type="date" [(ngModel)]="to">
-            <button (click)="filterByDate()">Get Tracks</button>
+            <mat-form-field>
+                <input matInput [matDatepicker]="fromPicker" [(ngModel)]="from" placeholder="Choose a date">
+                <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+                <mat-datepicker #fromPicker ></mat-datepicker>
+            </mat-form-field>
+
+            <mat-form-field>
+                <input matInput [matDatepicker]="toPicker" [(ngModel)]="to" placeholder="Choose a date">
+                <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+                <mat-datepicker #toPicker ></mat-datepicker>
+            </mat-form-field>
+
+                <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
+
         </div>
+        <div class="test">
+
+            
+        </div>
+
         <div class="filteredTracks">
 
             <div class="card-grid">
