Duplikate werden nicht angezeigt, nur das erste hinzugefügte Lied, playlistArray wird nach Datum aufsteigend sortiert

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -23,6 +23,10 @@
                     <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
                 </div>
 
+        <!-- <div class="addToPlaylist">
+
+        </div> -->
+
 
         </div>
 
