Creates Playlist named after date, insert all tracks from that timespan

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -22,7 +22,9 @@
                 <div class="filterButtonDiv">
                     <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
                 </div>
-
+                <div class="filterButtonDiv">
+                    <a (click)="createPlaylist()" class="filterButton">+</a>
+                </div>
         <!-- <div class="addToPlaylist">
 
         </div> -->
