Datepicker design angepasst

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="center-container">
     <div class="centerbox">
       <h1>Rediscover songs you loved.</h1>
-      <h4>Travel back in time and find tracks you listened to during certain times.</h4>
+      <h4>Travel back in time and discover tracks you listened to during certain timeframes.</h4>
       <div class="button-row">
         <a class="btn btn-outline">
           What's this?
