--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -2,7 +2,10 @@
     outline: 1px solid red; 
 } */
 *{
-    color:black;
+    /* color:black; */
+}
+.heading{
+  color: white;
 }
 .filterPanel{
     width: 100%;
@@ -12,7 +15,28 @@
     justify-content: space-around;
     align-content: center;
     align-items: center;
-
+}
+.input1{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  height: 100%;
+  /* border: 1px solid grey;
+  border-radius: 20px; */
+}
+.input1 input {
+  appearance: none;
+  outline: none;
+  /* font-size:1em; */
+  background-color: transparent;
+  color: black;
+  border: 1px solid grey;
+  padding: 10px 0px 10px 10px;
+  border-radius: 20px;
+}
+input::placeholder{
+  color: black;
 }
 .filterSettings{
   background-color: white;
@@ -21,14 +45,13 @@
   flex-direction: row; 
   justify-content: space-evenly;
   min-width: 800px;
-  max-width: 900px; 
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  position: sticky;
+  /* max-width: 900px;  */
+  padding-top: 2vh;
+  padding-bottom: 2vh;
   }
 .settingsBox {
-  margin-left: 3%;
-  margin-right: 3%;
+  /* margin-left: 2%;
+  margin-right: 2%; */
 }
 .filterButton {
   background-color: #1db954;
@@ -48,10 +71,37 @@
   -webkit-transition-duration: .3s;
   transition-duration: .3s;
   border-width: 0;
-  letter-spacing: 2px;
   text-transform: uppercase;
   white-space: normal;
   color: white;
+}
+.createPlaylistButton{
+  background-color: #1db954;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 .5% 0 .5%;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  padding: 16px 30px 18px;
+  transition-property: background-color,border-color,color,box-shadow,-webkit-filter;
+  transition-property: background-color,border-color,color,box-shadow,filter;
+  transition-property: background-color,border-color,color,box-shadow,filter,-webkit-filter;
+  transition-duration: .3s;
+  border-width: 0;
+  text-transform: uppercase;
+  white-space: normal;
+  color: white;
+}
+createPlaylistButtonDiv{
+  text-align: center;
+  text-justify: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 1.25em;
 }
 .filterButtonDiv {
   width: 217px;
