--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -1,33 +1,40 @@
 <div class="wrapper">
     <div class="filterPanel">
-        <!-- <h1>Hey {{user}}. Let's rediscover some tracks!</h1> -->
+        <div class="heading">
+            <h1>
+                Hey {{user}}, please select two Dates to select the tracks from.
+            </h1>
+        </div>
 
         <div class="filterSettings">
             <div class="settingsBox">
-                <mat-form-field>
-                    <input matInput [matDatepicker]="fromPicker" [(ngModel)]="from" placeholder="From">
-                    <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+                <!-- <mat-form-field> -->
+                <div class="input1">
+                    <input [matDatepicker]="fromPicker" (click)="fromPicker.open()" [(ngModel)]="from" placeholder="From">
+                    <!-- <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle> -->
                     <mat-datepicker #fromPicker></mat-datepicker>
-                </mat-form-field>
+                </div>
+
+                <!-- </mat-form-field> -->
             </div>
 
             <div class="settingsBox">
-                <mat-form-field>
-                    <input matInput [matDatepicker]="toPicker" [(ngModel)]="to" placeholder="To">
-                    <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+                <!-- <mat-form-field> -->
+                <div class="input1">
+                    <input matInput [matDatepicker]="toPicker" (click)="toPicker.open()" [(ngModel)]="to" placeholder="To">
+                    <!-- <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle> -->
                     <mat-datepicker #toPicker></mat-datepicker>
-                </mat-form-field>
+                </div>
+
+                <!-- </mat-form-field> -->
             </div>
 
-                <div class="filterButtonDiv">
-                    <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
-                </div>
-                <div class="filterButtonDiv">
-                    <a (click)="createPlaylist()" class="filterButton">+</a>
-                </div>
-        <!-- <div class="addToPlaylist">
-
-        </div> -->
+            <div class="filterButtonDiv settingsBox">
+                <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
+            </div>
+            <div class="createPlaylistButtonDiv settingsBox" *ngIf="showTracks">
+                <a (click)="createPlaylist()" class="createPlaylistButton">Create Playlist</a>
+            </div>
 
 
         </div>
