--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,12 @@
-
-.test{
-    background-color:red;
-    height:50px;
-    width: 50px;
+nav {
+    width: 100%;
+    height: 50px;
+    background-color: #000c;
+    position: fixed;
+    z-index: 2000;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
 }
+
