--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,11 @@
 <head>
     <title>Time Machine</title>
 </head>
+<header>
+    <nav>
+        <div class="logo">Rediscovery</div>
+        <div class="buttons"></div>
+    </nav>
+</header>
 <router-outlet></router-outlet>
 
