About sektion eingefügt, landing page mobile layout angepasst

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,14 +2,27 @@
   <div class="center-container">
     <div class="centerbox">
       <h1>Rediscover songs you loved.</h1>
-      <h4>Travel back in time and discover tracks you listened to during certain timeframes.</h4>
+      <h4>Select a timespan and discover what you added to your playlists at that time.</h4>
       <div class="button-row">
         <a class="btn btn-outline">
           What's this?
         </a>
-        <a class="btn btn-green" href="{{url}}">Login with spotify</a>
+        <a class="btn btn-green" href="{{url}}">Get started!</a>
       </div>
     </div>
   </div>
 
+
+</div>
+<div class="center-container">
+  <div class="about">
+    <div class="right">
+      <div class="heading">
+        <p>Select a timespan and discover what you added to your playlists at that time.</p>
+      </div>
+      <div class="description">
+        Just click on "Get Started" to log in with your spotify account.
+      </div>
+    </div>
+  </div>
 </div>
