--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -27,6 +27,7 @@
     min-width: 160px;
     text-transform: uppercase;
     white-space: normal;
+    margin-top: 10px;
 }
 .btn-outline{
     border: 2px solid #1db954;
@@ -47,12 +48,42 @@
     width: 100%;
 }
 h1{
-    margin: .5em 0 .25em;
+    /* margin: .5em 0 .25em; */
     font-weight: 700;
-    font-size: 70px;
+    font-size: 2.5rem;
 }
 h4{
     margin: .5em 0 1em;
     font-size: 18px;
     font-weight: 400;
+}
+.about{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    height: 100vh;
+    justify-content: center;
+    align-content: center;
+    /* border-radius: 20px; */
+}
+.right{
+    width: 50%;
+    color: black;
+    padding: 3%;
+}
+.heading {
+    font-weight: 600;
+    font-size: 27px;
+}
+.button-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+@media only screen and (max-width:600px) {
+    .button-row {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
